finished but its fucked in appearance

--- a/slideout.html
+++ b/slideout.html
@@ -4,6 +4,7 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<meta http-equiv="X-UA-Compatible" content="IE-EmulateIE7" />
 		<link href="slideoutstyle.css" rel="stylesheet" type="text/css" />
+		<!--[if IE]><style>#slideout{padding-top:10px;}.button{bottom:-64px;}#subscribe ul li a{margin:0px 15px;padding: 10px 0px 0px 55px;}#slide-out{margin-top:-83px;}</style>-->
 	</head>
 	<body>
 		<div id="slide-out">
